Ajuste quanto a análise feita por IA
